kdev-clang: don't skip unexposed declarations from different files

clang-c doesn't expose the 'extern "C"' linkage declaration. In some
cases, projects put #include statements within such linkage
statements. We used to fail to create declarations for them, and thus
also failed to build proper uses for any declaration.

BUG: 402066
(cherry picked from commit a7f7c9ac6b8fc9254d7efe17adde7d95b613bb1c)