plugins/clang/tests/files/includes/asdf.h
@@ -1,0 +1,2 @@
+/// "useCount" : 1
+int asdf();
